part2/e7/manifests/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pgsql-ss
  namespace: mainapp-ns
spec:
  serviceName: pgsql
  replicas: 1
  selector:
    matchLabels:
      app: pgapp
  template:
    metadata:
      labels:
        app: pgapp
    spec:
      containers:
        - name: postgres
          image: postgres:12
          ports:
            - name: pgsql
              containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: pgdata
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 100Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: mainapp-ns
  name: p2e07-pong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: p2e07-pong
  template:
    metadata:
      labels:
        app: p2e07-pong
    spec:
      containers:
        - name: p2e07-pong-container
          image: mcfizh/dwk-part1:p2e07-pong
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: mainapp-ns
  name: p2e07-main-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: p2e07-main
  template:
    metadata:
      labels:
        app: p2e07-main
    spec:
      volumes:
        - name: shared
          emptyDir: {}
      containers:
        - name: p2e07-main-a
          image: mcfizh/dwk-part1:p2e07-main-a
          volumeMounts:
            - name: shared
              mountPath: /shared
        - name: p2e07-main-b
          image: mcfizh/dwk-part1:p2e07-main-b
          imagePullPolicy: Always
          volumeMounts:
            - name: shared
              mountPath: /shared
