part2/e7/manifests/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgsql-svc
  namespace: mainapp-ns
spec:
  ports:
  - port: 5432
  clusterIP: None
  selector:
    app: pgapp
---
apiVersion: v1
kind: Service
metadata:
  namespace: mainapp-ns
  name: pongapp-service
spec:
  type: ClusterIP
  selector:
    app: p2e07-pong
  ports:
  - port: 2345
    protocol: TCP
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  namespace: mainapp-ns
  name: mainapp-service
spec:
  type: ClusterIP
  selector:
    app: p2e07-main
  ports:
  - port: 2346
    protocol: TCP
    targetPort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: mainapp-ns
  name: p2e07-ingress
  annotations:
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: mainapp-service
          servicePort: 2346
      - path: /pingpong
        backend:
          serviceName: pongapp-service
          servicePort: 2345
